# GraphingCalculator

./: .exrc  .gitignore  .nvimrc  .tags  .test_f.py.swp  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  GraphingCalculator.pro  Makefile  compile_commands.json  equation_widget.plist  function.cpp  function.h  function.plist  grapher.cpp  grapher.h  roadmap.md  tags  test.cpp  test_f.py  window.cpp  window.h
include/: equation_input.h  equation_widget.h  function.h  grapher.h  window.h
src/: equation_input.cpp  equation_widget.cpp  function.cpp  grapher.cpp  main.cpp  window.cpp
